Bug 163516 - LibreOffice Draw fails to store or restore Layer data Title and Description
Summary: LibreOffice Draw fails to store or restore Layer data Title and Description
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.6.7.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.3 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Layers
  Show dependency treegraph
 
Reported: 2024-10-18 20:08 UTC by neswal.peter
Modified: 2024-10-29 07:21 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description neswal.peter 2024-10-18 20:08:22 UTC
Description:
LibreOffice Draw (Tested with LibreOffice 24.8.2 Linux amd64 on Ubuntu 22.04 using LibreOffice original .deb amd64 packages for install) fails to store or restore Layer data Title and Description.

Steps to Reproduce:
1. Create a new empty LibreOffice Draw document
2. Add a new Layer
3. Enter Layer Name, Title and Description
4. Save the document
5. Close Draw
6. Reopen the Draw document

Actual Results:
1. Open the Properties of the Layer (Modify Layer)
2. Name of the Layer is there, Title and Description of the Layer are missing

Expected Results:
1. Open the Properties of the Layer (Modify Layer)
2. Title and Description of the Layer should be still there


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 6; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 m_a_riosv 2024-10-18 20:51:34 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4faa1775dfd90e781ac2f94a7ae1ada31b9d49f
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded

but the issue it's at opening.

File created with 25.2, show the data opening with
Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US
Calc: CL

but not with
Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 raal 2024-10-19 07:43:23 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.1.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 753e60e44eed7a1e8dd0de8b78a2032ec32e38b9 is the first bad commit
commit 753e60e44eed7a1e8dd0de8b78a2032ec32e38b9
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Nov 24 03:31:09 2020 +0100

    source c7b7153213619859d5f049b7c60eafa4c81f5225

106229: fastparser in SdXMLLayerContext | https://gerrit.libreoffice.org/c/core/+/106229
Comment 3 Commit Notification 2024-10-22 10:38:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75d6fd09138283b4af949d8071ecfee5e2545180

tdf#163516 Draw fails to restore Layer data Title and Description

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-10-22 12:28:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/98c886ae93526a38af825ac66627e1f2d5d4d073

tdf#163516 Draw fails to restore Layer data Title and Description

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-10-22 14:55:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fcfb116805d27e349622afe7dcfbb2f8f570712a

tdf#163516 Draw fails to restore Layer data Title and Description

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-10-29 07:21:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/95d005804c6683910417fbb3e7c9494f07d6b3c0

tdf#163516 Draw fails to restore Layer data Title and Description

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.