tdf#163516 Draw fails to restore Layer data Title and Description

regression from
    commit c7b7153213619859d5f049b7c60eafa4c81f5225
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Nov 20 14:24:51 2020 +0200
    fastparser in SdXMLLayerContext

Change-Id: I0db381fbd383efd23bb254703bea103ca0d270d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175378
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 75d6fd09138283b4af949d8071ecfee5e2545180)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175399
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>